--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.ssm.mav.questionnaire</groupId>
+  <groupId>com.ssm.questionnaire</groupId>
   <artifactId>questionnaire</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>questionnaire Maven Webapp</name>
+  <name>Questionnaire Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
   <properties>
@@ -92,6 +92,6 @@
         </dependency>
   </dependencies>
   <build>
-    <finalName>ssm-mav</finalName>
+    <finalName>questionnar</finalName>
   </build>
 </project>
