--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,18 @@
   <url>http://maven.apache.org</url>
   
   <properties>
-		<spring.version>4.0.5.RELEASE</spring.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.7</java.version>
-		<jackson.version>2.3.1</jackson.version>
-		<mybatis.version>3.2.5</mybatis.version>
+        <spring.version>4.0.5.RELEASE</spring.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.7</java.version>
+        <jackson.version>2.3.1</jackson.version>
+        <mybatis.version>3.2.5</mybatis.version>
         <mybatis-spring.version>1.2.2</mybatis-spring.version>
         <tomcat-jdbc.version>7.0.52</tomcat-jdbc.version>
         <jdbc.driver.groupId>mysql</jdbc.driver.groupId>
         <jdbc.driver.artifactId>mysql-connector-java</jdbc.driver.artifactId>
         <jdbc.driver.version>5.1.22</jdbc.driver.version>        
-	</properties>
-	
+    </properties>
+    
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -39,20 +39,20 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>${mybatis-spring.version}</version>
-        </dependency>		
+        </dependency>        
 
-		<!-- SpringMVC -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-oxm</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
+        <!-- SpringMVC -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-oxm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
@@ -63,18 +63,18 @@
             <version>${spring.version}</version>
         </dependency>
         
-  		<!-- jackson start -->
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-		   	<artifactId>jackson-core-asl</artifactId>
-		   	<version>1.9.12</version>
-		</dependency>
-		<dependency>
-		   	<groupId>org.codehaus.jackson</groupId>
-		   	<artifactId>jackson-mapper-lgpl</artifactId>
-		   	<version>1.9.12</version>
-		</dependency>
-  		<!-- jackson end -->
+          <!-- jackson start -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+               <artifactId>jackson-core-asl</artifactId>
+               <version>1.9.12</version>
+        </dependency>
+        <dependency>
+               <groupId>org.codehaus.jackson</groupId>
+               <artifactId>jackson-mapper-lgpl</artifactId>
+               <version>1.9.12</version>
+        </dependency>
+          <!-- jackson end -->
         
         <!-- connection pool -->
         <dependency>
@@ -92,6 +92,6 @@
         </dependency>
   </dependencies>
   <build>
-    <finalName>questionnar</finalName>
+    <finalName>questionnaire</finalName>
   </build>
 </project>
